# pyEuropePMC

./: .codescene-rules.json  .env.example  .gitattributes  .gitignore  .mypy.ini  .pre-commit-config.yaml  CHANGELOG.md  CITATION_NETWORKS_ADVICE_SUMMARY.md  FEATURE_PARALLEL_DOWNLOAD.md  LICENSE  Makefile  PMC3258128.xml  README.md  RELEASE_READINESS.md  SEMANTIC_SCHOLAR_CLIENT_ANALYSIS.md  SEMANTIC_SCHOLAR_REFACTORING_COMPLETE.md  benchmark_results_improved.json  benchmark_results_v2.json  benchmark_results_v3.json  benchmark_results_v4.json  mkdocs.yml  pyproject.toml  requirements.txt  sparql_examples.py  test_converters.py  test_parsing_improvements.py  tox.ini
.github/: copilot-instructions.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/agents/: api-design-agent.agent.md  biomedical-ontology-agent.agent.md  code-quality-assurance-agent.agent.md  database-design-agent.agent.md  devops-agent.agent.md  general-code-review-agent.agent.md  knowledge-graph-construction-agent.agent.md  performance-optimization-agent.agent.md  project-management-agent.agent.md  research-data-analysis-agent.agent.md  scientific-documentation-agent.agent.md  scientific-literature-search.agent.md  security-agent.agent.md
.github/chatmodes/: Plan.chatmode.md
.github/instructions/: copilot-instructions.md
.github/workflows/: analyze_repo.yml  api-docs.yml  benchmark.yml  cdci.yml  changelog.yml  codeql.yml  codescene-analysis.yml  deploy-docs.yml  enhanceIssue.yml  greetings.yml  integration-tests.yml  labeler.yml  python-compatibility.yml  release.yml  stale.yml  summary.yml  sync-github-wiki.yml  unit-tests.yml
analysis_results/: analysis_report.json  availability_summary.csv
benchmark_output/: xml_element_types.txt
benchmark_xmls/: benchmark_results.json  benchmark_results_extra.json  benchmark_results_full.json  metrics_report.json  pmcid_list.txt
benchmark_xmls/xml/: PMC12900525.xml  PMC12967033.xml  PMC13125388.xml  PMC13133655.xml  PMC13145325.xml  PMC13170065.xml  PMC13173394.xml  PMC13173494.xml  PMC13176631.xml  PMC13177175.xml  PMC13179431.xml  PMC13183359.xml  PMC13185476.xml  PMC13205833.xml  PMC13238313.xml  PMC13238366.xml  PMC13238370.xml  PMC13238411.xml  (+37 more)
benchmarks/: benchmark_README.md  benchmark_pipeline.py  benchmark_runner.py
conf/: pyeuropepmc-vocab.ttl  rdf_config.yaml  rdf_map.yml  rdf_map.yml.deprecated  rdfizer_config.ini  rml_mappings.ttl
demo_kg_output/: content_paper_10_1371_journal_pone_0037718.ttl  metadata_paper_10_1371_journal_pone_0037718.ttl  paper_10_1371_journal_pone_0037718.ttl
docs/: AGENTS.md  ANNOTATION_ENRICHMENT.md  COMPLETE_ARCHITECTURE_SUMMARY.md  GLOSSARY.md  IMPLEMENTATION_SUMMARY.md  LINKML_INTEGRATION_GUIDE.md  LinkML_Class_Hierarchy.md  LinkML_Schema_Overview.md  LinkML_Slots_Summary.md  LinkML_Visualization.md  MECFS_KG_BEST_PRACTICES.md  MODULAR_PERFORMANCE_REPORT.md  PHASES_3_4_SUMMARY.md  PHASES_5_6_SUMMARY.md  README.md  RICH_DATA_ENHANCEMENT_SUMMARY.md  SUMMARY.md  SUPPLIED_PMID_FEATURE_SUMMARY.md  _config.yml  advanced_cache_implementation_guide.md  book.json  cache_schema_migration.md  codescene-setup.md  data_models_implementation_summary.md  data_models_quickstart.md  enrichment.md  faq.md  feature-suggester.md  fulltext_parser.md  generated-models-fix.md  models.md  parser-improvement-summary.md  quickstart.md  rml_mappings_guide.md  sitemap.md  xml_element_coverage_analysis.md
examples/: README.md  advanced_fulltext_example.ipynb  analytics_demo.ipynb  analyze_xml_coverage.py  analyze_xml_elements.py  article_client_demo.ipynb  basic_usage.ipynb  basic_usage.py  data_models_demo.ipynb  end_to_end_long_covid_demo.ipynb  field_validation_example.py  filtering_demo.ipynb  filtering_demo.py  fulltext_parser_demo.py  fulltext_parser_simple_demo.py  rdf_conversion_demo.ipynb
issues/: advanced-cache-architecture-implementation.md  enhance-fulltext-parser-rich-ids.md  feature-request-parse-full-text-xml-into-various-outputs.md
output/: 10_1038_nature11476.ttl  10_1038_s41467-024-51893-7.ttl  10_1038_test123.ttl  PMC3258128.ttl  demo_10_1038_nature11476.ttl
pyeuropepmc/: __init__.py
rdf_output/: 10_1038_nature11476.ttl  long_covid_10_1002_ana_27128.ttl  test_10_1002_ana_27128.ttl  test_10_3389_fped_2025_1640747.ttl  test_fixed_10_3389_fped_2025_1640747.ttl
schemas/: README.md  base.yaml  pyeuropepmc.owl.ttl  pyeuropepmc.schema.json  pyeuropepmc_owl_generated.ttl  pyeuropepmc_schema.yaml  pyeuropepmc_schema_old.yaml  slots.yaml
scripts/: audit_rdf_linkml_coverage.py  check_fields.py  codescene_analysis.sh  create_suggestions.py  download_fixtures.py  fix_generated_models.py  regenerate_models.py  sync_rdf_mappings.py  xml_to_rdf.py  xml_to_rdf_rml.py
shacl/: pub.shacl.ttl  pyeuropepmc.shacl.ttl
test_output/: 10_1038_nature11476.ttl  annotations_only.ttl  enhanced_semantic.ttl  enrichment_enhanced.ttl  enrichment_only.ttl  incremental_enhanced.ttl  institutional_hierarchy.ttl  institutional_improved.ttl  me_cfs_coverage.json  pipeline_complete.ttl  pipeline_complete_with_ror.ttl  search_only.ttl  xml_only.ttl
tests/: benchmark_article_client.py  conftest.py  test_client_caching.py  test_converters_demo.py  test_filters.py  test_flexible_parsing.py  test_parallel_download.py  test_qa_toolset.py  test_search_logging.py  test_text_match.py
xml_downloads/: 10_1002_advs_202510004.xml  10_1002_advs_202513567.xml  10_1002_cac2_70067.xml  10_1002_mco2_70500.xml  10_1016_j_apsb_2025_07_017.xml  10_1042_bst20253065.xml  10_1080_19490976_2025_2571433.xml  10_1136_jitc-2024-010530.xml  10_1136_jitc-2025-012743.xml  10_1158_2326-6066_cir-25-0159.xml  10_1186_s12943-025-02460-1.xml  10_1186_s12943-025-02501-9.xml  10_1186_s13046-025-03569-3.xml  10_1186_s40164-025-00691-y.xml  10_1515_biol-2025-1179.xml  10_2147_ijn_s543991.xml  10_2147_itt_s485642.xml  10_32604_or_2025_071708.xml  10_3389_fimmu_2025_1665488.xml  10_3389_fimmu_2025_1688181.xml  10_3389_fimmu_2025_1706172.xml  10_3390_biomedicines13102497.xml  10_7150_ijms_120868.xml  PMC12389689.xml  PMC12634591.xml  long_covid.xml
(+573 files in other folders)
