[project]
name = "pyeuropepmc"
version = "1.14.0"
description = "A Python package for working with the Europe PMC API to search and retrieve scientific literature."
license = "MIT"
readme = "README.md"
authors = [
  { name = "Jonas Heinicke", email = "jonas.heinicke@helmholtz-hzi.de" },
]
requires-python = ">=3.10,<4.0"
keywords = ["europe-pmc", "pubmed", "literature", "api", "scientific"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
urls = { Homepage = "https://github.com/JonasHeinickeBio/pyEuropePMC", Repository = "https://github.com/JonasHeinickeBio/pyEuropePMC" }

dependencies = [
  "requests>=2.32.5,<3.0.0",
  "typer>=0.12.5,<0.13.0",
  "backoff>=2.2.1,<3.0.0",
  "tornado>=6.5.1,<7.0.0",
  "flask>=3.1.1,<4.0.0",
  "defusedxml>=0.7.1,<0.8.0",
  "tqdm>=4.67.1,<5.0.0",
  "beautifulsoup4>=4.13.5,<5.0.0",
  "tabulate>=0.9.0,<1.0.0",
  "xlsxwriter>=3.2.9,<4.0.0",
  "diskcache>=5.6.3,<6.0.0",
  "rapidfuzz>=2.15.0,<3.0.0",
  "search-query>=0.13.0,<0.14.0",
  "matplotlib>=3.7.0,<4.0.0",
  "seaborn>=0.12.0,<0.13.0",
  "cachetools>=6.2.1,<7.0.0",
  "requests-cache>=1.2.1,<2.0.0",
  "rdflib>=6.0.0,<7.0.0",
  "python-dotenv>=0.19.0,<1.0.0",
  "cryptography>=46.0.3,<47.0.0",
  "linkml>=1.0.0,<2.0.0",
]

[project.scripts]
europepmc-qa = "pyeuropepmc.qa.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.4.1",
  "pytest-cov>=6.0.0",
  "pre-commit>=4.2.0",
  "black>=25.1.0",
  "mypy>=1.16.1",
  "types-PyYAML>=6.0.12.20240311",
  "types-requests>=2.31.0",
  "types-cachetools>=5.5.0.20240818",
  "pytest-benchmark>=5.2.3",
  "coverage>=7.11.3",
  "bandit>=1.8.5",
  "ruff>=0.14.4",
  "typing-extensions>=4.14.0",
  "memory-profiler>=0.61.0",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "pyeuropepmc"
from = "src"

[tool.semantic_release]
version_variable = ["src/pyeuropepmc/__init__.py:__version__"]
branch = "main"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install poetry && poetry build"
commit_author = "Jonas Heinicke <jonas.heinicke@helmholtz-hzi.de>"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
markers = [
  "slow: mark test as slow (use '-m \"not slow\"' to skip)",
  "integration: mark test as integration (use '-m \"not integration\"' to skip)",
  "unit: mark test as unit (use '-m \"not unit\"' to skip)",
  "network: mark test that requires network access (use '-m \"not network\"' to skip)",
  "functional: mark test as functional (use '-m \"not functional\"' to skip)",
  "model: mark tests that require ML model dependencies (sentence-transformers, rapidfuzz, etc.)",
]
filterwarnings = [
  "ignore:.*Accessing the 'model_fields' attribute on the instance is deprecated.*:DeprecationWarning",
  "ignore:.*Accessing the 'model_computed_fields' attribute on the instance is deprecated.*:DeprecationWarning",
]

[tool.ruff]
line-length = 99
target-version = "py310"
exclude = [
  ".git",
  ".venv",
  "dist",
  "build",
  "docs",
  "__pycache__",
  ".pytest_cache",
  ".vscode",
  ".github",
  ".idea",
  "examples",
  "tests",
  "src/pyeuropepmc/models/generated.py",
]

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "UP", "B", "SIM"]
ignore = ["E203", "E266", "E731"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"src/pyeuropepmc/ftp_downloader.py" = ["C901"]
"src/pyeuropepmc/fulltext_parser.py" = ["C901"]
"src/pyeuropepmc/enrichment/enricher.py" = ["C901"]
"src/pyeuropepmc/builders/schema_validation.py" = ["C901"]
"src/pyeuropepmc/enrichment/pubtator.py" = ["C901"]
"src/pyeuropepmc/mappers/linkml_introspection.py" = ["C901"]
"src/pyeuropepmc/mappers/processors.py" = ["C901"]
"src/pyeuropepmc/mappers/rdf_mapper.py" = ["C901", "F821", "F841"]
"src/pyeuropepmc/mappers/rdf_utils.py" = ["C901"]
"src/pyeuropepmc/models/generated.py" = ["E501", "F821", "F841", "F811"]
"scripts/regenerate_models.py" = ["E501"]
"src/pyeuropepmc/models_backup*.py" = ["E501"]
"src/pyeuropepmc/models_custom.py" = ["C901", "SIM102"]
"src/pyeuropepmc/processing/fulltext_parser.py" = ["C901", "F821"]
"src/pyeuropepmc/processing/search_parser.py" = ["C901", "F821", "F841", "E501"]
"src/pyeuropepmc/processing/parsers/reference_parser.py" = ["E501", "B034"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["pyeuropepmc"]
force-sort-within-sections = true

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
multiline-quotes = "double"
docstring-quotes = "double"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
  \.git
  | \.venv
  | dist
  | build
  | docs
  | __pycache__
  | \.pytest_cache
  | \.vscode
  | \.github
  | \.idea
)/
'''
preview = true
skip-string-normalization = false

[tool.coverage.run]
branch = true
source = ["pyeuropepmc"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 50

[tool.bandit]
skips = ["B101", "B303"]
exclude_dirs = [
  "tests",
  "docs",
  "examples",
  ".venv",
  "dist",
  "build",
  ".git",
  "__pycache__",
  ".pytest_cache",
  ".vscode",
  ".github",
  ".idea",
]
paths = ["src"]
